Finished the whole app's responsive design

--- a/client/src/app/auth/profile/change-password-modal/change-password-modal.component.css
+++ b/client/src/app/auth/profile/change-password-modal/change-password-modal.component.css
@@ -8,14 +8,14 @@
   padding-bottom: 0;
 }
 
+h1 {
+  text-align: center;
+}
+
 form {
   display: flex;
   flex-direction: column;
   padding: 0 50px;
-}
-
-h1 {
-  text-align: center;
 }
 
 .input-container {
@@ -52,7 +52,8 @@ label {
 
 .input-icon {
   width: 30px;
-  cursor: pointer;
+  opacity: 40%;
+  color: white;
 }
 
 .input-icon .btn {
@@ -60,15 +61,13 @@ label {
   color: white;
 }
 
-input {
-  display: block;
+.input {
   color: white;
   background-color: #313131;
   border-radius: 10px;
   text-align: center;
   border: none;
   height: 20px;
-  margin: 0 auto;
 }
 
 input:focus {
@@ -98,8 +97,8 @@ input:-webkit-autofill:focus {
 
 .buttons-container {
   display: flex;
-  justify-content: center;
-  margin: 5% 0%;
+  justify-content: space-evenly;
+  margin: 24px 0;
 }
 
 .button {
@@ -120,7 +119,6 @@ input:-webkit-autofill:focus {
   font-size: large;
   color: white;
   cursor: pointer;
-  margin-right: 50px;
 }
 
 button:disabled {
@@ -131,7 +129,6 @@ button:disabled {
 @media (max-width: 500px) {
   .modal {
     width: 100%;
-    padding: 18px;
   }
 
   form {
