--- a/client/src/app/auth/profile/change-username-modal/change-username-modal.component.css
+++ b/client/src/app/auth/profile/change-username-modal/change-username-modal.component.css
@@ -52,7 +52,8 @@ label {
 
 .input-icon {
   width: 30px;
-  cursor: pointer;
+  opacity: 40%;
+  color: white;
 }
 
 .input-icon .btn {
@@ -61,14 +62,12 @@ label {
 }
 
 .input {
-  display: block;
   color: white;
   background-color: #313131;
   border-radius: 10px;
   text-align: center;
   border: none;
   height: 20px;
-  margin: 0 auto;
 }
 
 input:focus {
@@ -87,8 +86,8 @@ input:-webkit-autofill:focus {
 
 .buttons-container {
   display: flex;
-  justify-content: center;
-  margin: 5% 0%;
+  justify-content: space-evenly;
+  margin: 24px 0;
 }
 
 .button {
@@ -109,7 +108,6 @@ input:-webkit-autofill:focus {
   font-size: large;
   color: white;
   cursor: pointer;
-  margin-right: 50px;
 }
 
 button:disabled {
@@ -120,7 +118,6 @@ button:disabled {
 @media (max-width: 500px) {
   .modal {
     width: 100%;
-    padding: 18px;
   }
 
   form {
