--- a/client/src/app/home/crypto-card/crypto-card.component.html
+++ b/client/src/app/home/crypto-card/crypto-card.component.html
@@ -11,7 +11,7 @@
     <p><span class="label">7d:</span>
       {{ card.price_change_percentage_7d_in_currency / 100 | percent:'1.2-2' }}</p>
   </main>
-  <footer class="data-buttons">
+  <footer class="button-container">
     <a class="button" routerLink="/coins/{{card.id}}">Details</a>
   </footer>
 </article>
