--- a/client/src/app/auth/profile/change-password-modal/change-password-modal.component.html
+++ b/client/src/app/auth/profile/change-password-modal/change-password-modal.component.html
@@ -1,5 +1,6 @@
 <section class="modal">
   <h1>Change password</h1>
+  
   <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
 
     <div class="input-container">
@@ -10,8 +11,9 @@
       >Please enter the old password!</p>
 
       <div class="field">
-        <div class="spacer"></div>
+        <div class="input-icon"></div>
         <input id="oldPassword"
+        class="input"
         formControlName="oldPassword"
         [type]="oldPassField ? 'password' : 'text'">
         <div class="input-icon btn" (click)="toggleOldPass()">
@@ -35,8 +37,9 @@
       </div>
 
       <div class="field">
-        <div class="spacer"></div>
+        <div class="input-icon"></div>
         <input id="newPassword" 
+        class="input"
         formControlName="newPassword"
         [type]="newPassField ? 'password' : 'text'">
         <div class="input-icon btn" (click)="toggleNewPass()">
@@ -53,8 +56,9 @@
       >Passwords must match!</p>
 
       <div class="field">
-        <div class="spacer"></div>
+        <div class="input-icon"></div>
         <input id="reNewPassword" 
+        class="input"
         formControlName="reNewPassword"
         [type]="newRePassField ? 'password' : 'text'">
         <div class="input-icon btn" (click)="toggleNewRePass()">
