--- a/client/src/app/coins-view/coin-details/coin-details.component.css
+++ b/client/src/app/coins-view/coin-details/coin-details.component.css
@@ -124,7 +124,7 @@ main {
 }
 
 .coin-info .cell p {
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 600;
   line-height: 1.4;
 }
@@ -160,6 +160,17 @@ p.timestamp {
     flex-wrap: wrap;
     gap: 24px;
     margin: 24px;
+  }
+
+  .coin-info .cell p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.4;
+  }
+  
+  p.timestamp {
+    font-size: 14px;
+    font-weight: 300;
   }
 
   .left-header-part {
