--- a/client/src/app/portfolio-view/portfolio/portfolio.component.css
+++ b/client/src/app/portfolio-view/portfolio/portfolio.component.css
@@ -60,3 +60,13 @@
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.6);
 }
+
+@media (max-width: 800px) {
+  .portfolio {
+    padding: 14px;
+    margin: 100px 0;
+    width: 100%;
+    min-width: 320px;
+    border-radius: 0;
+  }
+}
