--- a/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
+++ b/client/src/app/converter-view/crypto-converter/crypto-converter.component.css
@@ -86,7 +86,7 @@ input:-webkit-autofill:focus {
 .menu-content {
   display: none;
   position: absolute;
-  width: 260px;
+  width: 100%;
   max-height: 300px;
   overflow: auto;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.712);
