--- a/client/src/app/portfolio-view/add-coin-modal/add-coin-modal.component.css
+++ b/client/src/app/portfolio-view/add-coin-modal/add-coin-modal.component.css
@@ -72,6 +72,7 @@ label {
   display: none;
   position: absolute;
   max-height: 300px;
+  width: 100%;
   overflow: auto;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.712);
   background-color: #313131;
