--- a/client/src/app/search/search.component.css
+++ b/client/src/app/search/search.component.css
@@ -63,8 +63,8 @@ button:disabled {
 .menu-content {
   display: none;
   position: absolute;
-  width: 485px;
   max-height: 400px;
+  width: 100%;
   overflow: auto;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.712);
   background-color: #313131;
@@ -72,7 +72,6 @@ button:disabled {
   border-bottom-right-radius: 6px;
   z-index: 1;
   top: 58px;
-  left: -10px;
 }
 
 .on {
