--- a/client/src/app/auth/profile/change-password-modal/change-password-modal.component.css
+++ b/client/src/app/auth/profile/change-password-modal/change-password-modal.component.css
@@ -1,6 +1,6 @@
 .modal {
-  color: white;
-  background-color: #1A1C1D;
+  color: var(--text-color);
+  background-color: var(--container-bg);
   box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
   width: 500px;
@@ -25,7 +25,7 @@ form {
 }
 
 .input-container:has(.field > input.ng-invalid.ng-touched) {
-  border-bottom: crimson 1px solid;
+  border-bottom: var(--error-color) 1px solid;
 }
 
 label {
@@ -37,7 +37,7 @@ label {
 
 .error {
   text-align: center;
-  color: crimson;
+  color: var(--error-color);
   font-style: italic;
   font-size: 15px;
 }
@@ -53,17 +53,17 @@ label {
 .input-icon {
   width: 30px;
   opacity: 40%;
-  color: white;
+  color: var(--text-color);
 }
 
 .input-icon .btn {
   opacity: 40%;
-  color: white;
+  color: var(--text-color);
 }
 
 .input {
-  color: white;
-  background-color: #313131;
+  color: var(--text-color);
+  background-color: var(--input-bg);
   border-radius: 10px;
   text-align: center;
   border: none;
@@ -75,22 +75,22 @@ input:focus {
 }
 
 ::placeholder {
-  color: #a8a8a8;
+  color: var(--placeholder-color);
 }
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
-  -webkit-text-fill-color: white;
-  -webkit-box-shadow: 0 0 0px 40rem #313131 inset;
+  -webkit-text-fill-color: var(--text-color);
+  -webkit-box-shadow: 0 0 0px 40rem var(--input-bg) inset;
 }
 
 .tooltip {
-  margin: 0 auto;
+  margin: 0.5rem auto 0 auto;
   width: 260px;
   padding: 8px;
   padding-left: 28px;
-  color: white;
+  color: var(--text-color);
   background-color: rgb(220, 20, 60);
   border-radius: 6px;
 }
@@ -102,27 +102,27 @@ input:-webkit-autofill:focus {
 }
 
 .button {
-  background-color: crimson;
+  background-color: var(--btn-primary);
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
   font-size: large;
-  color: white;
+  color: var(--text-color);
   cursor: pointer;
 }
 
 .button-cancel {
-  background-color: #525252;
+  background-color: var(--btn-secondary);
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
   font-size: large;
-  color: white;
+  color: var(--text-color);
   cursor: pointer;
 }
 
 button:disabled {
-  background-color: #050505;
+  background-color: var(--btn-disabled);
   cursor: not-allowed;
 }
 
