--- a/client/src/app/auth/profile/profile.component.css
+++ b/client/src/app/auth/profile/profile.component.css
@@ -9,8 +9,8 @@
   justify-content: space-between;
   width: 460px;
   height: 600px;
-  color: white;
-  background-color: #1A1C1D;
+  color: var(--text-color);
+  background-color: var(--container-bg);
   box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
 }
@@ -47,7 +47,7 @@
   flex-direction: column;
   justify-content: center;
   border-radius: 10px;
-  background-color: #1f1f1f;
+  background-color: var(--secondary-container-bg);
   margin: 24px;
   padding: 18px;
 }
@@ -61,7 +61,7 @@
 p {
   display: inline;
   text-decoration: none;
-  color: white;
+  color: var(--text-color);
   cursor: pointer;
 }
 
@@ -76,14 +76,14 @@ li.user-settings__option:last-child {
 
 .user-settings__option a:hover {
   padding: 8px 16px;
-  background-color: #2f2f30;
+  background-color: var(--btn-hover);
   border-radius: 6px;
   transition: background-color ease 600ms;
 }
 
 .user-settings__option:last-child a:hover {
   padding: 8px 16px;
-  background-color: crimson;
+  background-color: var(--error-color);
   border-radius: 6px;
   transition: background-color ease 600ms;
 }
