--- a/client/src/app/coins-view/coin-data-table/coin-data-table.component.css
+++ b/client/src/app/coins-view/coin-data-table/coin-data-table.component.css
@@ -3,13 +3,13 @@
   overflow: auto;
   white-space: nowrap;
   border-radius: 8px;
-  background-color: #1f1f1f;
+  background-color: var(--secondary-container-bg);
 }
 
 table {
   border-collapse: collapse;
   width: 100%;
-  background-color: #1f1f1f;
+  background-color: var(--secondary-container-bg);
 }
 
 thead {
@@ -30,7 +30,7 @@ tr:hover,
 tr:hover .first-col,
 tr:hover .second-col,
 tr:hover .third-col {
-  background-color: #2f2f30;
+  background-color: var(--btn-hover);
   transition: background-color ease 600ms;
 }
 
@@ -50,7 +50,7 @@ td {
   min-width: 32px;
   max-width: 32px;
   left: 0px;
-  background-color: #1f1f1f;
+  background-color: var(--secondary-container-bg);
 }
 
 .second-col {
@@ -59,7 +59,7 @@ td {
   max-width: 38px;
   left: 32px;
   padding-top: 6px;
-  background-color: #1f1f1f;
+  background-color: var(--secondary-container-bg);
 }
 
 .second-col>img {
@@ -72,7 +72,7 @@ td {
   max-width: 200px;
   left: 70px;
   text-align: left;
-  background-color: #1f1f1f;
+  background-color: var(--secondary-container-bg);
   overflow: hidden;
 }
 
