--- a/client/src/app/coins-view/new-coins/new-coins.component.css
+++ b/client/src/app/coins-view/new-coins/new-coins.component.css
@@ -1,11 +1,11 @@
 .container {
-  color: white;
+  color: var(--text-color);
   overflow-x: auto;
   margin-bottom: 200px 0
 }
 
 .global-data {
-  margin: 80px auto;
+  margin: 120px auto 60px auto;
   width: 80%;
 }
 
@@ -15,7 +15,7 @@
   width: 80%;
   min-width: 600px;
   max-width: 1600px;
-  background-color: #1A1C1D;
+  background-color: var(--container-bg);
   box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
 }
@@ -29,6 +29,7 @@
 @media (max-width: 800px) {
   .global-data {
     width: 90%;
+    margin: 80px auto 30px auto;
   }
 
   .table-component-container {
@@ -36,5 +37,11 @@
     width: 100%;
     min-width: 320px;
     border-radius: 0;
+  }
+
+  .table-component-container>h1 {
+    padding: 20px 0px 40px 0px;
+    font-weight: 300;
+    font-size: 28px;
   }
 }
