--- a/client/src/app/coins-view/top-hundred/top-hundred.component.css
+++ b/client/src/app/coins-view/top-hundred/top-hundred.component.css
@@ -1,11 +1,11 @@
 .container {
-  color: white;
+  color: var(--text-color);
   overflow-x: auto;
   margin-bottom: 200px;
 }
 
 .global-data {
-  margin: 80px auto;
+  margin: 120px auto 60px auto;
   width: 80%;
 }
 
@@ -15,7 +15,7 @@
   width: 80%;
   min-width: 600px;
   max-width: 1600px;
-  background-color: #1A1C1D;
+  background-color: var(--container-bg);
   box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
 }
