--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -4,8 +4,8 @@
 	z-index: 1;
 	padding: 8px 16px;
 	width: 100%;
-	color: white;
-	background-color: #1A1C1D;
+	color: var(--text-color);
+	background-color: var(--container-bg);
 	box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
 }
 
@@ -33,7 +33,7 @@ ul {
 
 .user {
 	padding: 15px;
-	color: white;
+	color: var(--text-color);
 }
 
 .right-container {
@@ -50,7 +50,7 @@ ul {
 	text-decoration: none;
 	padding: 8px;
 	border-radius: 10px;
-	color: white;
+	color: var(--text-color);
 	cursor: pointer;
 }
 
@@ -58,7 +58,7 @@ ul {
 	text-decoration: none;
 	padding: 8px;
 	border-radius: 10px;
-	background-color: #2f2f30;
+	background-color: var(--btn-hover);
 	transition: background-color, ease, 600ms;
 }
 
@@ -68,7 +68,7 @@ ul {
 		position: absolute;
 		top: 57px;
 		right: 0;
-		background-color: #1A1C1D;
+		background-color: var(--btn-hover);
 		border-radius: 6px;
 		padding: 10px;
 		box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
