--- a/client/src/app/portfolio-view/edit-coin-modal/edit-coin-modal.component.css
+++ b/client/src/app/portfolio-view/edit-coin-modal/edit-coin-modal.component.css
@@ -1,6 +1,6 @@
 .modal {
-  color: white;
-  background-color: #1A1C1D;
+  color: var(--text-color);
+  background-color: var(--container-bg);
   box-shadow: 6px 4px 31px 19px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
   width: 500px;
@@ -28,7 +28,7 @@ form {
 
 .input-container:has(.field>.input input.ng-invalid.ng-touched),
 .input-container:has(.field> input.ng-invalid.ng-touched) {
-  border-bottom: crimson 1px solid;
+  border-bottom: var(--error-color) 1px solid;
   transition: border-color, ease, 600ms;
 }
 
@@ -41,7 +41,7 @@ label {
 
 .error {
   text-align: center;
-  color: crimson;
+  color: var(--error-color);
   font-style: italic;
   font-size: 15px;
 }
@@ -58,9 +58,10 @@ label {
   width: 30px;
 }
 
-.input, input {
-  color: white;
-  background-color: #313131;
+.input,
+input {
+  color: var(--text-color);
+  background-color: var(--input-bg);
   border-radius: 10px;
   text-align: center;
   border: none;
@@ -73,15 +74,15 @@ input:focus {
 }
 
 ::placeholder {
-  color: #a8a8a8;
+  color: var(--placeholder-color)
 }
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px #313131 inset !important;
-  -webkit-text-fill-color: rgb(255, 255, 255);
+  -webkit-box-shadow: 0 0 0 30px var(--input-bg) inset !important;
+  -webkit-text-fill-color: var(--text-color);
 }
 
 input::-webkit-outer-spin-button,
@@ -97,27 +98,27 @@ input::-webkit-inner-spin-button {
 }
 
 .button {
-  background-color: crimson;
+  background-color: var(--btn-primary);
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
   font-size: large;
-  color: white;
+  color: var(--text-color);
   cursor: pointer;
 }
 
 .button-cancel {
-  background-color: #525252;
+  background-color: var(--btn-secondary);
   border: none;
   border-radius: 10px;
   padding: 10px 30px;
   font-size: large;
-  color: white;
+  color: var(--text-color);
   cursor: pointer;
 }
 
 button:disabled {
-  background-color: #050505;
+  background-color: var(--btn-disabled);
   cursor: not-allowed
 }
 
