--- a/client/src/app/shared/error-banner/error-banner.component.css
+++ b/client/src/app/shared/error-banner/error-banner.component.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: white;
+  color: var(--text-color);
   background: rgba(220, 20, 60, 0.4);
   text-align: center;
   padding: 15px;
@@ -31,7 +31,7 @@
 }
 
 .icon:hover {
-  background-color: #2f2f30;
+  background-color: var(--btn-hover);
   border-radius: 100%;
   padding: 3px;
   transition: background-color ease 600ms;
@@ -39,7 +39,7 @@
 
 @keyframes slideIn {
   from {
-    color: rgba(255, 255, 255, 0);
+    color: black;
     right: -500px
   }
 
